Task-4-Solution/kub_manifest/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../kub_manifest/
    kompose.image-pull-secret: regcred
    kompose.service.expose: carrental.nidacambay.com
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ../kub_manifest/
        kompose.image-pull-secret: regcred
        kompose.service.expose: carrental.nidacambay.com
        kompose.service.nodeport.port: "30001"
        kompose.service.type: nodeport
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: ui
    spec:
      containers:
        - env:
            - name: REACT_APP_API_URL
              value: http://carrental.nidacambay.com:8080/car-rental/api/
          image: IMAGE_TAG_UI
          name: brc-frontend
          ports:
            - containerPort: 3000
              protocol: TCP
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
