Task-4-Solution/kub_manifest/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ../kub_manifest/
    kompose.image-pull-secret: regcred
    kompose.service.expose: carrental.nidacambay.com
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: ui
  name: ui
spec:
  ports:
    - name: "3000"
      nodePort: 30001
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: ui
  type: NodePort
